--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,6 @@ configurations {
   compileOnly {
     extendsFrom annotationProcessor
   }
-  configureEach {
-    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-  }
 }
 
 repositories {
@@ -28,37 +25,49 @@ repositories {
 }
 
 dependencies {
+  // === Spring Core ===
   implementation 'org.springframework.boot:spring-boot-starter-web'
-  implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-  implementation 'org.springframework.boot:spring-boot-starter-validation'
-  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+  implementation 'org.springframework.boot:spring-boot-starter-security'
 
-  compileOnly 'org.projectlombok:lombok'
-  annotationProcessor 'org.projectlombok:lombok'
-  testCompileOnly 'org.projectlombok:lombok'
-  testAnnotationProcessor 'org.projectlombok:lombok'
-
-  implementation 'org.mapstruct:mapstruct:1.6.3'
-  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
-  annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
-
-  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
-
-  implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-
-  implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
-  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
-  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
-
-  implementation 'com.warrenstrange:googleauth:1.5.0'
-
+  // === DB ===
   runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
-  developmentOnly 'org.springframework.boot:spring-boot-devtools'
+  // === Lombok ===
+  compileOnly 'org.projectlombok:lombok'
+  annotationProcessor 'org.projectlombok:lombok'
+
+  // === MapStruct ===
+  implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+  annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+
+  // === QueryDSL ===
+  implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+  annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+
+  // === JPA API (Entity 어노테이션 문제 해결) ===
+  implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+  annotationProcessor 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+
+  // === Redis ===
+  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+  // === JWT ===
+  implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+  // === AWS SDK (BOM 방식) ===
+  implementation platform("software.amazon.awssdk:bom:2.25.39")
+  implementation "software.amazon.awssdk:s3"
+  implementation "software.amazon.awssdk:sts"
+
+  // === Test ===
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
-  testImplementation 'org.springframework.security:spring-security-test'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+  // ======================================
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
