--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,6 @@ configurations {
   compileOnly {
     extendsFrom annotationProcessor
   }
-  configureEach {
-    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
-  }
 }
 
 repositories {
@@ -28,36 +25,33 @@ repositories {
 }
 
 dependencies {
-  implementation 'org.springframework.boot:spring-boot-starter-web'
-  implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-  implementation 'org.springframework.boot:spring-boot-starter-validation'
-  implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+  implementation 'org.springframework.boot:spring-boot-starter'
+  implementation 'org.springframework.boot:spring-boot-starter-web'
+
+  // ✅ logging 직접 쓰고 싶으면 아래 추가
+  implementation 'ch.qos.logback:logback-classic'
+
+  implementation 'io.github.bonigarcia:webdrivermanager:5.9.2'
+  runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+  implementation 'org.seleniumhq.selenium:selenium-java:4.22.0'
+  implementation 'org.seleniumhq.selenium:selenium-chrome-driver:4.22.0'
+  implementation 'org.jsoup:jsoup:1.18.1'
 
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
   testCompileOnly 'org.projectlombok:lombok'
   testAnnotationProcessor 'org.projectlombok:lombok'
 
-  implementation 'org.mapstruct:mapstruct:1.6.3'
-  annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
-  annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+  implementation 'net.coobird:thumbnailator:0.4.20'
+  implementation 'org.sejda.imageio:webp-imageio:0.1.6'
 
-  implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
+  implementation 'software.amazon.awssdk:s3:2.25.46'
+  implementation 'software.amazon.awssdk:auth:2.25.46'
+  implementation 'software.amazon.awssdk:core:2.25.46'
 
-  implementation 'org.springframework.boot:spring-boot-starter-log4j2'
-
-  implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
-  runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
-  runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
-
-  implementation 'com.warrenstrange:googleauth:1.5.0'
-
-  runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
-
-  developmentOnly 'org.springframework.boot:spring-boot-devtools'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
-  testImplementation 'org.springframework.security:spring-security-test'
   testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
