--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ dependencies {
   implementation 'com.warrenstrange:googleauth:1.5.0'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
+  implementation 'com.google.api-client:google-api-client:2.8.1'
+
 
 
   // = Logging ===
