--- a/build.gradle
+++ b/build.gradle
@@ -36,14 +36,11 @@ dependencies {
   // === Lombok ===
   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
+  testAnnotationProcessor 'org.projectlombok:lombok'
 
   // === MapStruct ===
   implementation 'org.mapstruct:mapstruct:1.5.5.Final'
   annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
-
-  // === QueryDSL ===
-  implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-  annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
 
   // === JPA API (Entity 어노테이션 문제 해결) ===
   implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
@@ -68,6 +65,9 @@ dependencies {
 
   // ======================================
   implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+  // junit test
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
