--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
       - optional:classpath:secret/db.yml
       - optional:classpath:secret/jwt.yml
       - optional:classpath:secret/oauth.yml
+      - optional:classpath:secret/aws_s3.yml
   jpa:
     hibernate:
       ddl-auto: none
