--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
-  implementation 'com.google.api-client:google-api-client:2.8.1'
-
+  implementation 'org.springframework.boot:spring-boot-starter-mail:3.5.5'
 
 
   // = Logging ===
