--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       - optional:classpath:secret/db.yml
       - optional:classpath:secret/jwt.yml
       - optional:classpath:secret/oauth.yml
-      - optional:classpath:secret/portone.yml
+      - optional:classpath:secret/mail.yml
   jpa:
     hibernate:
       ddl-auto: none
