결제 준비 로직 구현 - 일반 결제 저장 처리 및 구독 결제 시 tbl_subscribe 생성, tbl_subscribe_round 회차(1회차) 자동 생성 및 결제(tbl_payment)와 연결

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,13 +9,17 @@ spring:
       - optional:classpath:secret/mail.yml
       - optional:classpath:secret/redis.yml
       - optional:classpath:secret/portone.yml
+
   jpa:
     hibernate:
       ddl-auto: none
+      naming:
+        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
-    show_sql: true
+
 logging:
   level:
     org.springframework.security: DEBUG
