--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
       - optional:classpath:secret/oauth.yml
       - optional:classpath:secret/mail.yml
       - optional:classpath:secret/redis.yml
+      - optional:classpath:secret/portone.yml
   jpa:
     hibernate:
       ddl-auto: none
@@ -18,3 +19,4 @@ spring:
 logging:
   level:
     org.springframework.security: DEBUG
+
