--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,20 +6,15 @@ spring:
       - optional:classpath:secret/db.yml
       - optional:classpath:secret/jwt.yml
       - optional:classpath:secret/oauth.yml
-      - optional:classpath:secret/mail.yml
-      - optional:classpath:secret/redis.yml
       - optional:classpath:secret/portone.yml
-
+      - optional:classpath:secret/mail.yml
   jpa:
     hibernate:
       ddl-auto: none
-      naming:
-        implicit-strategy: org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy
-    show-sql: true
     properties:
       hibernate:
         format_sql: true
-
+    show_sql: true
 logging:
   level:
     org.springframework.security: DEBUG
