--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
   implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
   implementation 'org.springframework.boot:spring-boot-starter-mail:3.5.5'
 
+  // 버전 비교용 라이브러리
+  implementation 'org.apache.maven:maven-artifact:3.9.9'
+
 
   // = Logging ===
   implementation 'org.springframework.boot:spring-boot-starter-log4j2'
