시크릿 폴더 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
       - optional:classpath:secret/oauth.yml
       - optional:classpath:secret/portone.yml
       - optional:classpath:secret/mail.yml
+      - optional:classpath:secret/solapi.yml
   jpa:
     hibernate:
       ddl-auto: none
