--- a/build.gradle
+++ b/build.gradle
@@ -81,6 +81,9 @@ dependencies {
 
   // ======================================
   implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+  // ==== Mail ========
+  implementation 'org.springframework.boot:spring-boot-starter-mail:3.5.5'
 }
 
 tasks.named('test') {
