--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
   // 버전 비교용 라이브러리
   implementation 'org.apache.maven:maven-artifact:3.9.9'
 
+  // 유저 접속 정보 파싱 라이브러리
+  implementation 'com.github.ua-parser:uap-java:1.6.1'
 
   // = Logging ===
   implementation 'org.springframework.boot:spring-boot-starter-log4j2'
