--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,12 @@ spring:
       - optional:classpath:secret/mail.yml
       - optional:classpath:secret/solapi.yml
       - optional:classpath:secret/redis.yml
+
+  jackson:
+    property-naming-strategy: SNAKE_CASE
+    serialization:
+      write-dates-as-timestamps: false
+
   jpa:
     hibernate:
       ddl-auto: none
@@ -17,6 +23,7 @@ spring:
       hibernate:
         format_sql: true
     show_sql: true
+
 logging:
   level:
     org.springframework.security: DEBUG
