--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,14 +15,14 @@ spring:
         format_sql: true
     show_sql: true
   datasource:
-      hikari:
-        minimum-idle: 3
-        maximum-pool-size: 10
-        idle-timeout: 30000
-        max-lifetime: 60000       # 60초마다 커넥션 새로 갱신
-        connection-timeout: 30000
-        keepalive-time: 15000
+    hikari:
+      minimum-idle: 5
+      maximum-pool-size: 20
+      idle-timeout: 600000
+      max-lifetime: 1800000
+      connection-timeout: 30000
+      keepalive-time: 300000
+
 logging:
   level:
     org.springframework.security: DEBUG
-
