--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,38 +2,46 @@ name: CI/CD for Sayren Backend (Gradle + Redis Compose)
 
 on:
   push:
-    branches: [ feature/payment-module ]
+    branches: [ feature/payment-module ]  # 네 작업 브랜치 기준
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ 소스코드 체크아웃
       - name: Checkout source
         uses: actions/checkout@v3
 
+      # 2️⃣ JDK 21 설정
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
           distribution: 'temurin'
 
+      # 3️⃣ Gradlew 실행 권한 부여
       - name: Grant execute permission for Gradlew
         run: chmod +x gradlew
 
+      # 4️⃣ Gradle 빌드 (테스트 제외)
       - name: Build with Gradle (skip tests)
         run: ./gradlew clean build -x test
 
+      # 5️⃣ 빌드 결과 확인
       - name: Verify build output
         run: ls -al build/libs
 
+      # 6️⃣ Docker Compose 빌드 (백엔드 + Redis)
       - name: Build Docker Compose Images
         run: docker compose -f docker-compose.yml build
 
+      # 7️⃣ Docker Hub 로그인
       - name: Login to Docker Hub
         run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
+      # 8️⃣ 백엔드 이미지 푸시 (실제 compose가 생성한 이름 기반)
       - name: Push Backend Image to Docker Hub
         run: |
-          docker tag sayren_backend:latest ${{ secrets.DOCKER_USERNAME }}/sayren-backend:latest
+          docker tag sayren_back-backend:latest ${{ secrets.DOCKER_USERNAME }}/sayren-backend:latest
           docker push ${{ secrets.DOCKER_USERNAME }}/sayren-backend:latest
