--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,22 @@
 version: "3.8"
 
 services:
+  nginx:
+    image: nginx:1.25-alpine
+    container_name: sayren_nginx
+    ports:
+      - "8800:80"           # EC2 외부 8800 → nginx 내부 80
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - backend
+    restart: always
+
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: sr0116/sayren-backend:latest
     container_name: sayren_backend
     ports:
-      - "8080:8080"
+      - "8801:8080"         # EC2 외부 8801 → 백엔드 내부 8080
     environment:
       SPRING_PROFILES_ACTIVE: prod
       REDIS_HOST: redis
@@ -20,7 +29,7 @@ services:
     image: redis:7.2-alpine
     container_name: sayren_redis
     ports:
-      - "6379:6379"
+      - "6380:6379"         # EC2 외부 6380 → redis 내부 6379
     volumes:
       - redis_data:/data
     restart: always
