--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,9 @@ server {
     listen 80;
     server_name _;
 
+    proxy_connect_timeout 60s;
+    proxy_read_timeout 60s;
+
     location / {
         proxy_pass http://backend:8080;
         proxy_set_header Host $host;
