--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: nginx:1.25-alpine
     container_name: sayren_nginx
     ports:
-      - "8800:80"           # EC2 외부 8800 → nginx 내부 80
+      - "8800:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
@@ -13,19 +13,14 @@ services:
     restart: always
 
   backend:
-    image: sr0116/sayren-backend:latest
+    build: .                      # 🟢 EC2에서 직접 빌드할 때 사용
     container_name: sayren_backend
     ports:
-      - "8801:8080"         # EC2 외부 8801 → 백엔드 내부 8080
+      - "8801:8080"
     environment:
       SPRING_PROFILES_ACTIVE: prod
       REDIS_HOST: redis
       REDIS_PORT: 6379
-      # JWT 시크릿 직접 전달 (혹시 secret 폴더 import 실패 대비용)
-      JWT_SECRET: security-jwt-study-key-this-is-key
-    volumes:
-      # secret 폴더를 컨테이너 내부에도 마운트 (Spring이 실제 읽을 수 있도록)
-      - ./src/main/resources/secret:/app/resources/secret
     depends_on:
       - redis
     restart: always
@@ -34,7 +29,7 @@ services:
     image: redis:7.2-alpine
     container_name: sayren_redis
     ports:
-      - "6380:6379"         # EC2 외부 6380 → redis 내부 6379
+      - "6380:6379"
     volumes:
       - redis_data:/data
     restart: always
