--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: nginx:1.25-alpine
     container_name: sayren_nginx
     ports:
-      - "8800:80"
+      - "8800:80"  # EC2 외부 8800 → nginx 내부 80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
@@ -13,14 +13,17 @@ services:
     restart: always
 
   backend:
-    build: .                      # 🟢 EC2에서 직접 빌드할 때 사용
+    build: .  # ✅ EC2에서 직접 빌드 시 사용 (GitHub Actions에서는 비활성)
     container_name: sayren_backend
     ports:
-      - "8801:8080"
+      - "8801:8080"  # EC2 외부 8801 → 백엔드 내부 8080
     environment:
       SPRING_PROFILES_ACTIVE: prod
       REDIS_HOST: redis
       REDIS_PORT: 6379
+      TZ: Asia/Seoul   # ✅ 로그 시간 일치 (EC2 기본은 UTC라서)
+    volumes:
+      - ./src/main/resources/secret:/app/resources/secret  # ✅ secret 폴더 컨테이너 내부에 마운트
     depends_on:
       - redis
     restart: always
@@ -29,7 +32,7 @@ services:
     image: redis:7.2-alpine
     container_name: sayren_redis
     ports:
-      - "6380:6379"
+      - "6380:6379"  # EC2 외부 6380 → redis 내부 6379
     volumes:
       - redis_data:/data
     restart: always
