도커 파일 수정4.......

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       REDIS_PORT: 6379
       TZ: Asia/Seoul
     volumes:
+      #  로컬에서 EC2 컨테이너로 secret 동기화
       - ./src/main/resources/secret:/app/secret
     depends_on:
       - redis
