--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -7,14 +7,16 @@ spring:
       - "optional:classpath:secret/db.yml"
       - "optional:classpath:secret/jwt.yml"
       - "optional:classpath:secret/mail.yml"
-      - "optional:classpath:secret/next.yml"
       - "optional:classpath:secret/portone.yml"
       - "optional:classpath:secret/solapi.yml"
-      - "optional:classpath:secret/oauth.yml"
+      - "optional:classpath:secret/redis.yml"   # 로컬 redis
+
 app:
   backend:
     base-url: "http://localhost:8080"
+
   frontend:
     base-url: "http://localhost:3000"
+
   oauth:
     base-url: "http://localhost:8080"
