액세스 토큰 발급 수정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,17 +1,31 @@
+
 spring:
   application:
     name: sayren_back
 
+  data:
+    redis:
+      host: sayren-redis     # docker-compose 서비스명
+      port: 6379
+      timeout: 2000
+
   config:
     import:
+      # ----------------------
+      # 공통 시크릿 (local + prod)
+      # ----------------------
       - "optional:classpath:secret/db.yml"
       - "optional:classpath:secret/jwt.yml"
       - "optional:classpath:secret/mail.yml"
-      - "optional:classpath:secret/next.yml"
       - "optional:classpath:secret/portone.yml"
       - "optional:classpath:secret/solapi.yml"
-      - "optional:classpath:secret/oauth.yml"
+
+      # ----------------------
+      # prod 전용 시크릿
+      # (반드시 src/main/resources/secret-prod/ 안에 존재)
+      # ----------------------
       - "optional:classpath:secret-prod/oauth.yml"
+      - "optional:classpath:secret-prod/next.yml"
 
 app:
   backend:
@@ -22,3 +36,12 @@ app:
 
   oauth:
     base-url: "https://api.sayren.imchobo.com"
+
+
+
+
+
+
+
+
+
